--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
 server.port=8383
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
