--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,10 @@ logging.level.org.hibernate.SQL=ERROR
 
 #http://localhost:8383/h2-console
 
-
-
+#logging
+logging.file.name = ecare.log
+logging.file.path = /logs
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+logging.file.max-history=12
