--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.file.max-history=12
 #security
 jwt.token.secret=jwtappdemo
 jwt.token.expired=3600000
+
+spring.main.allow-circular-references=true
