jwt works by login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.level.org.hibernate=error
 logging.file.max-history=12
 
 #security
-jwt.token.secret=jwtappdemo
+jwt.token.secret=jwtappdemo-mybestsecretkey-3216565656565656565656
 jwt.token.expired=3600000
 
 spring.main.allow-circular-references=true
