--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
+%test.spring.datasource.driverClassName=org.h2.Driver
 server.port=8383
-spring.datasource.url=jdbc:h2:mem:apidb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
