--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 server.port=8383
 spring.datasource.url=jdbc:h2:mem:apidb
+spring.jpa.defer-datasource-initialization=true
+#datasource.script=classpath:resources/data.sql
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
