--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,12 @@
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 server.port=8383
-spring.datasource.url=jdbc:h2:mem:apidb
-spring.jpa.defer-datasource-initialization=true
-#datasource.script=classpath:resources/data.sql
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=root
+spring.datasource.data=test-data.sql
+spring.datasource.initialize=false
+spring.sql.init.mode=never
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
