--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ jwt.token.secret=jwtappdemo-mybestsecretkey-3216565656565656565656
 jwt.token.expired=3600000
 
 spring.main.allow-circular-references=true
+
+flyway.url=jdbc:h2:mem:apidb
+flyway.enabled: true
+flyway.locations: 'classpath:db/migration'
