--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+#db-settings
 spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 server.port=8383
 spring.datasource.url=jdbc:h2:mem:apidb
 spring.jpa.defer-datasource-initialization=true
-#datasource.script=classpath:resources/data.sql
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
@@ -11,15 +11,13 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-
 logging.level.org.hibernate.SQL=ERROR
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
 #http://localhost:8383/h2-console
 
 #logging
-logging.file.name = ecare.log
-logging.file.path = /logs
+logging.file.name=ecare.log
+logging.file.path=/logs
 logging.level.root=info
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
@@ -28,5 +26,4 @@ logging.file.max-history=12
 #security
 jwt.token.secret=jwtappdemo-mybestsecretkey-3216565656565656565656
 jwt.token.expired=3600000
-
 spring.main.allow-circular-references=true
