--- a/pom.xml
+++ b/pom.xml
@@ -111,26 +111,12 @@
             <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- test coverage -->
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.8</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.eclipse.microprofile.openapi/microprofile-openapi-api -->
-        <!-- openapi-api generation-->
-        <dependency>
-            <groupId>org.eclipse.microprofile.openapi</groupId>
-            <artifactId>microprofile-openapi-api</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/io.smallrye/smallrye-open-api-spring -->
-        <dependency>
-            <groupId>io.smallrye</groupId>
-            <artifactId>smallrye-open-api-spring</artifactId>
-            <version>3.1.1</version>
-        </dependency>
-
-
     </dependencies>
 
     <build>
